bazel_dep(name = "rules_java", version = "9.2.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "contrib_rules_jvm", version = "0.31.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:33.5.0-jre",
        "com.google.truth:truth:1.4.5",
        "io.github.libsdl4j:libsdl4j:2.28.4-1.6",
        "org.junit.jupiter:junit-jupiter-api:5.14.1",
        "org.junit.jupiter:junit-jupiter-engine:5.14.1",
        "org.junit.platform:junit-platform-launcher:1.14.1",
        "org.junit.platform:junit-platform-reporting:1.14.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
